--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "lowdb": "^7.0.1"
+    "lowdb": "^7.0.1",
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.2.0",
