--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     ],
     "moduleDetection": "force",
     "useDefineForClassFields": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
