--- a/package.json
+++ b/package.json
@@ -48,12 +48,15 @@
     "@types/body-parser": "^1.19.5",
     "body-parser": "^1.20.3",
     "chalk": "^5.4.1",
+    "colors": "^1.4.0",
     "commander": "^13.1.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "glob": "^11.0.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "loglevel": "^1.9.2",
+    "loglevel-plugin-prefix": "^0.8.4",
     "reflect-metadata": "^0.2.2",
     "unconfig": "^7.0.0"
   },
